apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__entity_error_with_index_in_path-2.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": null
        },
        {
          "id": "2",
          "name": "Organization 2"
        }
      ]
    }
  },
  "errors": [
    {
      "message": "subgraph mock not configured",
      "path": [
        "currentUser",
        "allOrganizations",
        0
      ],
      "extensions": {
        "code": "SUBGRAPH_MOCK_NOT_CONFIGURED",
        "service": "orga"
      }
    }
  ]
}
