apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__entity_error_with_index_in_path.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": null
        },
        {
          "id": "2",
          "name": "Organization 2"
        }
      ]
    }
  },
  "errors": [
    {
      "message": "cannot resolve name",
      "path": [
        "currentUser",
        "allOrganizations",
        0,
        "name"
      ],
      "extensions": {
        "code": "NAME_FAILURE",
        "service": "orga"
      }
    }
  ]
}
