apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__entity_error_without_index_in_path.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": null
        },
        {
          "id": "2",
          "name": "Organization 2"
        }
      ]
    }
  },
  "errors": [
    {
      "message": "cannot resolve name",
      "path": [
        "currentUser",
        "allOrganizations",
        0
      ],
      "extensions": {
        "code": "NAME_FAILURE",
        "service": "orga"
      }
    },
    {
      "message": "cannot resolve name",
      "path": [
        "currentUser",
        "allOrganizations",
        1
      ],
      "extensions": {
        "code": "NAME_FAILURE",
        "service": "orga"
      }
    }
  ]
}
