apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__insert-5.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:orga:type:Organization:entity:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:representation:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:hash:8113586cd499fd3c818a9f4d9571e91ebf653c1b10c8d5f18890c4787692ea84:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "cached",
    "cache_control": "public"
  },
  {
    "key": "version:1.2:subgraph:user:type:Query:hash:67ee6d45c2a8b7a948d1902d247debf684f04b05af42c9b72d88ceebeb6d4957:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "cached",
    "cache_control": "public"
  }
]
