apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__insert_with_requires-5.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:inventory:type:Product:entity:b4b9ed9d4e2f363655b5446f86dc83b506dfcbcea2abae70309aca3f8674ff8b:representation:8dbf201fbd6778142beb28906582c9c09b6fa3e83300d24ab3a1683dfc03f927:hash:616ca55c786db14d06ce4696846fb7cc520da97498dd17bfff427d8efa909b8f:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "cached",
    "cache_control": "public"
  },
  {
    "key": "version:1.2:subgraph:products:type:Query:hash:4bb95a32d933157770163efab6439ca5d1c8429a0bed5193300348c9890c441b:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "cached",
    "cache_control": "public"
  }
]
