apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__insert_with_requires-6.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "Test",
        "shippingEstimate": 15,
        "price": 150
      }
    ]
  }
}
